--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,9 @@
-/* @font-face {
+ @font-face {
     font-family: 'MyFont';
-    src: url('./my-font.woff2') format('woff2'),
-      url('./my-font.woff') format('woff');
     font-weight: 600;
     font-style: normal;
 }
+/*
 div{
     background-color: rgb(201, 176, 176);
     color: rgb(76, 0, 255);
@@ -19,3 +18,18 @@ textarea{
   resize: none;
 }
 
+.header{
+  background-color:rgb(79, 79, 124);
+}
+.header-heading{
+  color: white;
+}
+
+.full-width{
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.heading-font{
+  font-family: 'MyFont';
+  font-size: 10px;
+}
